cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_308.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:245: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:245:9: Write of unused value
243.           iv = &(*ivec)[0];
244.           l2c(tout0, iv);
245.           l2c(tout1, iv);
               ^
246.       } else {
247.           register DES_LONG t0, t1;
